# NPU-Check

./: CHANGELOG.md  README.md  build.yaml  pubspec.yaml
android/: build_log_9.txt
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: native_lib.cpp
android/app/src/main/kotlin/com/neuralgauge/neural_gauge/: MainActivity.kt
android/app/src/main/kotlin/com/npucheck/app/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/ffi/: llama_bindings.dart
lib/core/services/: llama_bindings.dart  llama_service.dart
lib/core/theme/: app_theme.dart
lib/features/benchmark/application/: benchmark_controller.dart  benchmark_controller.g.dart  benchmark_state.dart  benchmark_state.freezed.dart  partial_download_checker.dart
lib/features/benchmark/data/models/: benchmark_result.dart  benchmark_result.g.dart
lib/features/benchmark/data/repositories/: benchmark_repository.dart
lib/features/benchmark/domain/: model_manager.dart  model_strategy.dart  model_type.dart
lib/features/benchmark/presentation/screens/: home_screen.dart
lib/features/benchmark/presentation/widgets/: model_selector_widget.dart  speedometer_widget.dart  typewriter_text.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
